# LMN-3-DAW-Android

./: .gitignore  .gitmodules  README.md  build.gradle  cibuild.sh  lmn-3-daw-android.patch  settings.gradle  tracktion-android.patch
.github/workflows/: actions.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/rmsl/juce/: Java.kt
app/src/main/res/values/: string.xml
gradle/wrapper/: gradle-wrapper.properties
